# demo/swagger.json
@@ -103,13 +103,13 @@
             "type": "object",
             "required": ["name", "test"],
             "properties": {
-              "name": {
+              "field1": {
                 "type": "string",
                 "minLength": 1,
                 "pattern": "^[a-zA-Z\\'\\s]+$",
                 "maxLength": 100
               },
-              "test": {
+              "field2": {
                 "type": "string",
                 "minLength": 1,
                 "maxLength": 100
